Change Notes
=============

2012-12-11 jbornema
	- Added CSVExtractor.trimColumnName to trim the identified column names.
	  Added UTF-8 encoding support and a buggy SFDC UTF-16BE BOM (generated twice).

2012-09-28 jbornema
	- Fixed NPE in CSVLoader when export is done into regular/unzipped file.

2012-09-19 jbornema
	- Due to OutOfMemoryException it can happen that the job state is enqueued without being in the queue.
	  Added isJobEnqueued(IJob) in class JobQueue and ETLgineServer.

2012-08-03 jbornema
	- Removed Job.activeContext and used Job.processChain.getGlobalContext() instead
	- Added JobQueue.getThread()
	- Second "Stop Flag" invokes JobQueue.getThread().interrupt() to get out of Thread.sleep() state
	- Synchronized DefaultMonitor.logToBuffer(String, String, Throwable) and JDBCMonitor.logToTable(String, String, Throwable)
	- JobQueue's Thread is now running in its own ThreadGroup

2012-08-02 jbornema
	- Committed many ETL future enhancements, bug-fixes, ORACLE support.
	  As too many files where touch, the tag "before_msaa_commit_2012_08_02" was created before commit.
	- Major changes:
		- New server.properties:
			- initializing.listener.classnames
				List of IServerInitializingListener classes to hook in the event of the ETL Server initialization
				
			- monitor.classname
				Defines the default IMonitor implementation
		- Many event had been introduced/re-factored to better support IMonitor logging
		- JDBCMonitor added (not final, just a first idea, that uses a JDBCLoader to log into a table)
		  (Might get renamed to LoaderMonitor to use ILoader instead of JDBCLoader)
		- JDBCLoader many changes (containing ORACLE work-a-round for 30 character dictionary limitations)

2011-09-13 jbornema
	- Job fixed incorrect setting of activeContext

2011-09-02 jbornema
	- JDBCUtil.setSharedConnection(IContext context, String shareName, Connection connection) added to support
	  custom setting of share connections